fix(web): prevent inline simulation button from overlapping other elements in TxDetails component

--- a/apps/web/src/components/transactions/TxDetails/styles.module.css
+++ b/apps/web/src/components/transactions/TxDetails/styles.module.css
@@ -6,6 +6,9 @@
 
 .detailsWrapper {
   position: relative;
+  display: flex;
+  justify-content: space-between;
+  border-bottom: 1px solid var(--color-border-light);
 }
 
 .details {
@@ -23,10 +26,7 @@
 }
 
 .inlineSimulation {
-  display: flex;
-  justify-content: flex-end;
   margin: var(--space-2);
-  position: absolute;
   right: 0;
   top: 0;
   z-index: 1;
@@ -49,10 +49,6 @@
 .advancedDetails,
 .txModule {
   padding: var(--space-2);
-}
-
-.txData {
-  border-bottom: 1px solid var(--color-border-light);
 }
 
 .txData:empty {
@@ -116,6 +112,10 @@
 
 @media (max-width: 1350px) {
   .inlineSimulation {
-    position: relative;
+    margin-left: auto;
+  }
+
+  .detailsWrapper {
+    flex-direction: column-reverse;
   }
 }
